--- a/ResContainer.et.resx
+++ b/ResContainer.et.resx
@@ -3583,4 +3583,118 @@ Esiteks kustutage saadud arve.</value>
 	<data name="lblCost" xml:space="preserve">
 		<value>Hind</value>
 	</data>
+	<data name="TTN_lblProductKits" xml:space="preserve">
+		<value>tootekomplektid</value>
+	</data>
+	<data name="TTN_lblSetCost" xml:space="preserve">
+		<value>Varude kogus</value>
+	</data>
+	<data name="TTN_lblSetArrival" xml:space="preserve">
+		<value>Laos saabuvate komplekt</value>
+	</data>
+	<data name="TTN_lblResourceConsumption" xml:space="preserve">
+		<value>ressursitarbimise jaoks</value>
+	</data>
+	<data name="TTN_lblChoiceTypeSets" xml:space="preserve">
+		<value>Komplekti tüüpide valik</value>
+	</data>
+	<data name="TTN_lblOwherResource" xml:space="preserve">
+		<value>Ressursiomanik</value>
+	</data>
+	<data name="lblResource" xml:space="preserve">
+		<value>Ressurss</value>
+	</data>
+	<data name="lblPlace" xml:space="preserve">
+		<value>Asukoht</value>
+	</data>
+	<data name="lblStore" xml:space="preserve">
+		<value>Ladu</value>
+	</data>
+	<data name="TTN_ntfNotStavkaNDS" xml:space="preserve">
+		<value>Lahtine käibemaksumäär pole täidetud</value>
+	</data>
+	<data name="TTN_lblCheckRest" xml:space="preserve">
+		<value>Kontrollige tasakaalu</value>
+	</data>
+	<data name="TTN_lblRest" xml:space="preserve">
+		<value>Ülejäänud</value>
+	</data>
+	<data name="lblPayerAgent" xml:space="preserve">
+		<value>Maksja on esindaja</value>
+	</data>
+	<data name="lblShipperAgent" xml:space="preserve">
+		<value>Tarnija on agent</value>
+	</data>
+	<data name="TTN_lblShowAllRest" xml:space="preserve">
+		<value>Näita kõiki saldoid</value>
+	</data>
+	<data name="TTN_lblVagonFilter" xml:space="preserve">
+		<value>Filtreerige auto numbri järgi</value>
+	</data>
+	<data name="TTN_lblDisplaySetsDocument" xml:space="preserve">
+		<value>Selle dokumendi näidikud</value>
+	</data>
+	<data name="TTN_lblFilterInvoiceNumber" xml:space="preserve">
+		<value>Filtreerige arve number</value>
+	</data>
+	<data name="TTN_lblRests" xml:space="preserve">
+		<value>Järelejäänud</value>
+	</data>
+	<data name="lblMove" xml:space="preserve">
+		<value>Liikuda</value>
+	</data>
+	<data name="TTN_lblPurchase" xml:space="preserve">
+		<value>Ostmine</value>
+	</data>
+	<data name="TTN_lblProduction" xml:space="preserve">
+		<value>Tootmine</value>
+	</data>
+	<data name="TTN_msgWorkDocumentNotCompleted" xml:space="preserve">
+		<value>Dokumendiga töötamine pole lõpetatud!</value>
+	</data>
+	<data name="TTN_lblConsumption" xml:space="preserve">
+		<value>Tarbimine</value>
+	</data>
+	<data name="TTN_lblReceipt" xml:space="preserve">
+		<value>Saabumine</value>
+	</data>
+	<data name="TTN_lblFact" xml:space="preserve">
+		<value>Tegelik</value>
+	</data>
+	<data name="TTN_lblCalculeted" xml:space="preserve">
+		<value>Arvutamine</value>
+	</data>
+	<data name="TTN_lblSet" xml:space="preserve">
+		<value>Seatud</value>
+	</data>
+	<data name="TTN_lblRestSkladOn" xml:space="preserve">
+		<value>Varude bilanss seisuga</value>
+	</data>
+	<data name="TTN_lblNoSet" xml:space="preserve">
+		<value>ilma värbamiseta</value>
+	</data>
+	<data name="TTN_lblAllSet" xml:space="preserve">
+		<value>Kokku dial</value>
+	</data>
+	<data name="TTN_lblDistributeByDocuments" xml:space="preserve">
+		<value>Levitada dokumentidega</value>
+	</data>
+	<data name="TTN_lblStockCode" xml:space="preserve">
+		<value>Varude kood</value>
+	</data>
+	<data name="lblMaxValue" xml:space="preserve">
+		<value>Maksimaalne väärtus</value>
+	</data>
+	<data name="TTN_lblFillAreasWagonShipments" xml:space="preserve">
+		<value>Täitke vaguni saadetiste alad</value>
+	</data>
+	<data name="TTN_lblSelectAreasWagonShipments" xml:space="preserve">
+		<value>Valige vaguni saadetiste alad</value>
+	</data>
+	<data name="TTN_lblChoiceContact" xml:space="preserve">
+		<value>Võtke ühendust valikuga</value>
+	</data>
+	<data name="TTN_lblChooseContact" xml:space="preserve">
+		<value>Valige kontakt</value>
+	</data>
 </root>
